--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -119,7 +119,8 @@
 	border:2px solid #fff;
 	background-color:rgba(0,0,0,.3)
 }
-.basic-editarea, .basic-editarea .mq-root-block, .basic-editarea .mq-math-mode .mq-root-block{ overflow: auto; width: auto;}
+.basic-editarea{ overflow: auto;}
+.basic-editarea .mq-root-block{ overflow-x: auto; width: auto; min-width: 100%;}
 .basic-editarea{ clear: both; display: block; width: 99%; margin: 0 auto; height: 315px;}
 
 .basic-editarea::-webkit-scrollbar, 
@@ -183,6 +184,12 @@
 }
 
 
+.fi-kmath-overset-left-harpoonup-a:before {
+  content: "\e963";
+}
+.fi-kmath-overset-right-harpoonup-a:before {
+  content: "\e964";
+}
 .fi-kmath-bigcap-nolimits-sub-a:before {
   content: "\e957";
 }
